--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -48,6 +48,7 @@
           float: right;
         }
         .delNotification {
+          margin-left: 10px;
           color: #bfbfbf;
         }
       }
@@ -58,6 +59,12 @@
         margin: 20px auto;
         width: 90%;
         box-shadow: 0 2px 4px 0 #bfbfbf;
+        .blogContent {
+          display: block;
+          line-clamp: 5; /*多行文本 溢出部分...*/
+          box-orient: vertical; /*从上向下垂直排列*/
+          overflow: hidden;
+        }
       }
     }
     .notificationContainer, .blogContainer {
