--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
       <div>
         <nz-modal
           [(nzVisible)]="isEditVisible"
-          nzTitle="编辑"
+          nzTitle="发布新内容"
           nzOkText="确认"
           nzCancelText="取消"
           (nzOnCancel)="handleEditCancel()"
@@ -41,9 +41,11 @@
               </nz-form-control>
             </nz-form-item>
             <nz-form-item>
-              <nz-radio-group formControlName="visibleRange" [(ngModel)]="visibleRangeValue">
-                <label *ngFor="let val of visibleRangeValues" nz-radio [nzValue]="val">{{val}}</label>
-              </nz-radio-group>
+              <nz-form-control>
+                <nz-radio-group formControlName="visibleRange" [(ngModel)]="visibleRangeValue">
+                  <label *ngFor="let val of visibleRangeValues" nz-radio [nzValue]="val">{{val}}</label>
+                </nz-radio-group>
+              </nz-form-control>
             </nz-form-item>
           </form>
         </nz-modal>
