Fix: Blog|Notification-data

--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -4,8 +4,11 @@
   height: 31px;
   // margin-top: -64px;
 }
+.homeEntrance {
+  margin-left: 70%;
+}
 
-.userEntrance, .logoutEntrance {
+.homeEntrance, .userEntrance, .logoutEntrance {
   color: #fff;
 }
 
