--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -45,6 +45,14 @@
               <i nz-icon [nzType]="'lock'" class="isPublic" *ngIf="!blog.Public"></i>
             </p>
           </div>
+          <div class="page-button">
+            <nz-button-group>
+              <button *ngIf="currentPageId == 1" nz-button nzType="default" disabled><i nz-icon nzType="left"></i></button>
+              <button *ngIf="currentPageId != 1" nz-button nzType="default" (click)="getPage(currentPageId - 1, pageSize)"><i nz-icon nzType="left"></i></button>
+              <button *ngIf="isLastPage" nz-button nzType="default" disabled><i nz-icon nzType="right"></i></button>
+              <button *ngIf="!isLastPage" nz-button nzType="default" (click)="getPage(currentPageId + 1, pageSize)"><i nz-icon nzType="right"></i></button>
+            </nz-button-group>
+          </div>
         </div>
         <div class="blogContainer" *ngIf="userBlogData && userBlogData.length==0">
           <nz-empty [nzNotFoundContent]="notFoundContent">
@@ -59,17 +67,17 @@
             <p class="content">{{notification.Notification.Content}}</p>
             <p class="createTime">
               {{notification.Notification.CreateTime | date:'yyyy-MM-dd HH:mm:ss'}}
-              <a
-                nz-popconfirm
-                nzPopconfirmTitle="Are you sure delete this task?"
-                nzPopconfirmPlacement="bottom"
-                (nzOnConfirm)="deleteConfirm(notification)"
-                (nzOnCancel)="deleteCancel()"
-                >
-                <i nz-icon [nzType]="'delete'" class="delNotification"></i>
-                <!-- <i nz-icon [nzType]="'delete'" class="delNotification" (click)="deleteNotification(notification)"></i> -->
-              </a>
-
+              <i nz-icon [nzType]="'delete'" class="delNotification">
+                <a
+                  nz-popconfirm
+                  nzPopconfirmTitle="Are you sure delete this task?"
+                  nzPopconfirmPlacement="bottom"
+                  (nzOnConfirm)="deleteNotification(notification)"
+                  (nzOnCancel)="deleteCancel()"
+                  >
+                  <!-- <i nz-icon [nzType]="'delete'" class="delNotification" (click)="deleteNotification(notification)"></i> -->
+                </a>
+              </i>
             </p>
           </div>
         </div>
