Update: Notification Delete-test

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -54,20 +54,20 @@
             </nz-button-group>
           </div>
         </div>
-        <div class="blogContainer" *ngIf="userBlogData && userBlogData.length==0">
+        <div class="blogContainer" *ngIf="userBlogData == null">
           <nz-empty [nzNotFoundContent]="notFoundContent">
             <ng-template #notFoundContent><span> 暂无博客 </span></ng-template>
           </nz-empty>
         </div>
       </nz-tab>
-      <nz-tab nzTitle="Notification Center">
+      <nz-tab nzTitle="Notification Center" *ngIf="isSelf">
         <div class="notificationContainer" *ngIf="userNotifications != null">
           <div class="notificationCard" *ngFor="let notification of userNotifications">
             <p class="targetUser">From {{notification.User.Name}}</p>
             <p class="content">{{notification.Notification.Content}}</p>
             <p class="createTime">
               {{notification.Notification.CreateTime | date:'yyyy-MM-dd HH:mm:ss'}}
-              <i nz-icon [nzType]="'delete'" class="delNotification"
+              <!-- <i nz-icon [nzType]="'delete'" class="delNotification"
                 nz-popconfirm
                 nzPopconfirmTitle="Are you sure delete this task?"
                 nzPopconfirmPlacement="bottom"
@@ -75,11 +75,23 @@
                 (nzOnCancel)="deleteCancel()"
                 *ngIf="isSelf"
               >
-              </i>
+              </i> -->
+              <i nz-icon [nzType]="'delete'" (click)="showDeleteModal()"></i>
             </p>
+            <nz-modal
+              [(nzVisible)]="isDeleteVisible"
+              nzTitle="Warning"
+              nzOkText="Confirm"
+              nzCancelText="Cancle"
+              (nzOnOk)="deleteNotification(notification)"
+              (nzOnCancel)="deleteCancel()"
+              [nzOkLoading]="isDeleteOkLoading"
+            >
+              <p>Are you sure to delete this notification ?</p>
+            </nz-modal>
           </div>
         </div>
-        <div class="notificationContainer" *ngIf="userNotifications && userNotifications.length==0">
+        <div class="notificationContainer" *ngIf="userNotifications == null">
           <nz-empty [nzNotFoundContent]="notFoundContent">
             <ng-template #notFoundContent><span> 暂无通知 </span></ng-template>
           </nz-empty>
