feat(nav-bar): 增加发布按钮，调整布局
取消 home 页面发布功能

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,9 +7,9 @@
           <nz-breadcrumb-item>Timeline</nz-breadcrumb-item>
         </nz-breadcrumb>
       </div>
-      <div class="add-content-bnt">
+      <!-- <div class="add-content-bnt">
         <button nz-button nzType="primary" nzSize="large" nzShape="circle" (click)="showEditModal()"><i nz-icon nzType="form" nzTheme="outline"></i></button>
-      </div>
+      </div> -->
       <div>
         <nz-modal
           [(nzVisible)]="isEditVisible"
