--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,8 +2,32 @@
   <div class="navContainer">
     <nz-layout>
       <nz-header>
-        <a routerLinkActive="active" routerLink="/"><img src="https://cdn.jsdelivr.net/gh/sherryjw/StaticResource@master/image/logo-03.png" height="50"></a>
         <!-- <a routerLinkActive="active" routerLink="/" class="homeEntrance"><span>首页</span></a> -->
+        <ul nz-menu nzTheme="dark" nzMode="horizontal" nzSelectable="false">
+          <li nz-menu-item class="logo">
+            <a routerLinkActive="active" routerLink="/"><img src="https://cdn.jsdelivr.net/gh/sherryjw/StaticResource@master/image/logo-03.png" height="50"></a>
+          </li>
+          <li nz-menu-item *ngIf="isLogin()" class="float-right">
+            <a (click)="jumpToUser()" routerLinkActive="active" class="userEntrance">
+              <span>个人主页</span>
+            </a>
+          </li>
+          <li nz-menu-item *ngIf="isLogin()" class="float-right">
+            <a (click)="logOut()" routerLinkActive="active" class="logoutEntrance">
+              <span>退出登录</span>
+            </a>
+          </li>
+          <li nz-menu-item *ngIf="!isLogin() && showBar()" class="float-right">
+            <button nz-button (click)="jumpToLogin()" class="login"><span>登录/注册</span></button>
+          </li>
+          <li nz-menu-item class="float-right">
+            <app-new-content-editor-button></app-new-content-editor-button>
+          </li>
+        </ul>
+      </nz-header>
+      <!-- <nz-header>
+        <a routerLinkActive="active" routerLink="/"><img src="https://cdn.jsdelivr.net/gh/sherryjw/StaticResource@master/image/logo-03.png" height="50"></a>
+        <a routerLinkActive="active" routerLink="/" class="homeEntrance"><span>首页</span></a>
         <div class="user" *ngIf="isLogin()">
           <a (click)="jumpToUser()" routerLinkActive="active" class="userEntrance">
             <span>个人主页</span>
@@ -15,7 +39,7 @@
         <div class="user" *ngIf="!isLogin() && showBar()">
           <button nz-button (click)="jumpToLogin()" class="login"><span>登录/注册</span></button>
         </div>
-      </nz-header>
+      </nz-header> -->
     </nz-layout>
   </div>
 </div>
