--- a/src/theme.less
+++ b/src/theme.less
@@ -549,7 +549,7 @@
 @menu-item-boundary-margin: 8px;
 @menu-item-padding: 0 20px;
 @menu-horizontal-line-height: 46px;
-@menu-icon-margin-right: 10px;
+@menu-icon-margin-right: 0;
 @menu-icon-size: @menu-item-font-size;
 @menu-icon-size-lg: @font-size-lg;
 @menu-item-group-title-font-size: @menu-item-font-size;
